CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(CPP_BASIC_TEST)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
# set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD 14)

INCLUDE_DIRECTORIES(include)

ADD_EXECUTABLE(struct_copy_test src/struct_copy_test.cpp)
ADD_EXECUTABLE(cpp_input_test src/cpp_input_test.cpp)
ADD_EXECUTABLE(cart_shuffle src/cart_shuffle.cpp)
ADD_EXECUTABLE(class_in_class src/class_in_class.cpp)
ADD_EXECUTABLE(bit_operator src/bit_operator.cpp)
ADD_EXECUTABLE(test_union src/test_union.cpp )
ADD_EXECUTABLE(test_vector src/test_vector.cpp)
ADD_EXECUTABLE(test_char src/test_char.cpp)
ADD_EXECUTABLE(test_const src/test_const.cpp)
