CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(CPP_BASIC_TEST)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
# set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD 14)

INCLUDE_DIRECTORIES(include)

ADD_EXECUTABLE(test_union src/test_union.cpp )
ADD_EXECUTABLE(test_vector src/test_vector.cpp)
ADD_EXECUTABLE(test_char src/test_char.cpp)
ADD_EXECUTABLE(test_const src/test_const.cpp)
ADD_EXECUTABLE(test_cpp_input src/test_cpp_input.cpp)
ADD_EXECUTABLE(test_struct_copy src/test_struct_copy.cpp)
ADD_EXECUTABLE(test_class_in_class src/test_class_in_class.cpp)
ADD_EXECUTABLE(test_shuffle src/test_shuffle.cpp)
ADD_EXECUTABLE(test_bit_operator src/test_bit_operator.cpp)
ADD_EXECUTABLE(test_playground src/test_playground.cpp)
