CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(kalman_filter)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(Eigen3 REQUIRED)


INCLUDE_DIRECTORIES(inc ${EIGEN3_INCLUDE_DIRS})
# INCLUDE_DIRECTORIES(EIGEN3_INCLUDE_DIRS)

ADD_EXECUTABLE(kalman_filter src/kalman_filter.cpp)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
